# Alternatives

./: .gitignore  Box.h  BoxValueInRange.h  BoxValueInRangeMaker.h  BoxValueInSet.h  BoxValueInSetMaker.h  CMakeLists.txt  FlatBox.h  Union.h  ValueInRange.h  ValueInSet.h
Tests/: BoxTests.cpp  CMakeLists.txt  doctest.h
include/: Boxes.h
internal/: BelongsTo.h  OverloadStateful.h
